# HuffmanCompression

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  REQUIREMENTS.md  xmake.lua
.github/workflows/: build.yml
resources/个人项目-基于Huffman编码的压缩/其他附件/: 中文处理（仅供参考）.md
src/: adaptive.cpp  adaptive.hpp  archive_format.cpp  archive_format.hpp  bit_stream.cpp  bit_stream.hpp  cli.cpp  cli.hpp  code_table.cpp  code_table.hpp  compressor.cpp  compressor.hpp  decompressor.cpp  decompressor.hpp  file_io.cpp  file_io.hpp  frequency.cpp  frequency.hpp  hash.cpp  hash.hpp  huffman_tree.cpp  huffman_tree.hpp  main.cpp  metrics.cpp  metrics.hpp  path_utils.cpp  path_utils.hpp
